@@ -4,6 +4,7 @@ linux (4.9.1-1~exp2) UNRELEASED; urgency=medium
   * abiupdate.py: Update base URLs
   * abiupdate.py: Add support for incoming.ports.debian.org
   * Make the pickled config (config.defines.dump) reproducible
+  * Remove debug symbol packages from debian/control to work around dak bug
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 07 Jan 2017 17:41:34 +0000
 
